# HRMS-Portal

./: .env.example  .env.production.example  .gitignore  AGENTS.md  Dockerfile  HRMS_Department_Wise.pptx  README.md  app.py  docker-compose.yml  generate_ppt.py  pyproject.toml  railway.json  render.yaml  requirements.txt
.github/workflows/: ci.yml
deploy/: setup.sh
templates/: _navbar.html  admin_audit.html  admin_dashboard.html  admin_documents.html  admin_expenses.html  admin_leaves.html  admin_reports.html  admin_tickets.html  admin_users.html  analytics.html  assets.html  candidates.html  documents.html  expenses.html  goals.html  holidays.html  import_users.html  jobs.html  leaves.html  login.html  my_goals.html  offboarding.html  onboarding.html  org_chart.html  payroll.html  profile.html  regularization.html  reviews.html  salary.html  tickets.html  user_dashboard.html
tests/: test_app.py  test_playwright.py
